WIP logo resize, overlapping cards bug, side-nav autpo-close

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+:root {
+  --logo-size: 180px; 
+  --logo-size-mobile: 80px; 
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
 }
@@ -20,14 +25,18 @@ body {
 
 #main {
   margin-left: 0;
-  margin-top: 60px;
+  margin-top: var(--logo-size-mobile);
   padding-left: 240px;
   flex: 1;
 }
 
 .Logo img {
   cursor: pointer;
-  height: 60px;
+  height: var(--logo-size);
+}
+
+.HeaderNav .Logo img {
+  height: var(--logo-size-mobile);
 }
 
 .HeaderNav {
@@ -35,12 +44,13 @@ body {
   top: 0;
   bottom: 0;
   width: 100%;
-  height: 60px;
+  height: var(--logo-size-mobile);
 }
 
 .HeaderNav {
   background-color: white;
-  box-shadow: none;
+  /* box-shadow: none; */
+  z-index: 100;
 }
 
 .HeaderNav .brand-logo {
@@ -50,6 +60,8 @@ body {
 .HeaderNav .side-nav-trigger {
   color: black;
   cursor: pointer;
+  height: var(--logo-size-mobile);
+  background-color: #eee;
 }
 
 .HeaderNav .side-nav-trigger:hover {
@@ -63,7 +75,7 @@ body {
 .SideNav {
   z-index: 10;
   background-color: white;
-  margin-top: 60px;
+  margin-top: var(--logo-size);
   padding: 65px 15px;
   position: fixed;
   top: 0;
@@ -74,9 +86,15 @@ body {
   overflow-y: auto;
 }
 
+
 .top-nav,
 .bottom-nav {
   padding-left: 40px;
+}
+
+.top-nav .Logo {
+  left: -42px;
+  position: relative;
 }
 
 .bottom-nav {
@@ -226,7 +244,7 @@ img.carousel-image {
   width: 50%;
 }
 
-/* Mobile */
+/* Desktop */
 @media screen and (min-width: 1025px) {
   #main,
   .SideNav {
@@ -235,8 +253,12 @@ img.carousel-image {
   .HeaderNav {
     display: none;
   }
+  .overlay-text-mobile {
+    display: none;
+  }
 }
 
+/* Mobile */
 @media screen and (max-width: 1024px) {
   #main {
     padding-left: 0px;
@@ -256,9 +278,13 @@ img.carousel-image {
   .SideNavMobile {
     display: block;
     padding: 0;
+    width: 100%;
   }
   img.carousel-image {
     width: 100%;
     max-height: none;
+  }
+  .simple-card-overlay {
+    display: none;
   }
 }
